syntax = "proto3";

package turnstile;

option java_package = "distsys.recruitmentday.turnstile";
option java_outer_classname = "Turnstile";

service TurnstileService {
  rpc CheckPin(CheckPinRequest) returns (CheckPinResponse);
}

message CheckPinRequest {
  int32 pin = 1;
}

message CheckPinResponse {
  bool access_granted = 1;
  string message = 2;
}